# app-accumulate

./: .clang-format  .gitignore  .gitlab-ci.yml  CHANGELOG.md  CMakeLists.txt  Dockerfile  LICENSE  Makefile  Makefile.docker  README.md  docker-builder.sh  docker-loader.sh
.doxygen/: Doxyfile
.github/workflows/: ci-workflow.yml  client-checks.yml  codeql-workflow.yml  lint-workflow.yml
ci/: build-gitlab.sh  build.sh  upload.sh
doc/: COMMANDS.md
fuzzing/: CMakeLists.txt  create-corpus.sh  fuzz_tx_parser.cc
fuzzing/extra/: TxParser.cmake
icons/: accumulatelogo_bw.xcf
include/common/: base58.h  bip32.h  buffer.h  error.h  format.h  hasher.h  jsmn.h  keccak.h  read.h  sha256.h  uint256.h  uvarint.h  varint.h  write.h
include/encoding/: bigint.h  bool.h  bytes.h  bytes32.h  bytes64.h  encoding.h  marshaler.h  rawjson.h  string.h  url.h  uvarint.h  varint.h
include/protocol/: enum.h  envelope.h  general.h  signatures.h  transaction.h  unions.h  unions_config.h
src/: CMakeLists.txt  address.c  address.h  constants.h  crypto.c  crypto.h  globals.h  io.c  io.h  main.c  sw.h  types.h
src/apdu/: dispatcher.c  parser.c  parser.h
src/common/: base58.c  bip32.c  buffer.c  buffer.h  ed25519sig.c  ed25519sig.h  encoding.c  encoding.h  envelope.c  envelope.h  error.c  error.h  format.c  hasher.c  keccak.c  read.c  sha256.c  sha256.h  uint256.c  uint256.h  uvarint.c  varint.c  varint.h  write.c
src/common/encoding/: bigint.c  bigint.h  bool.c  bool.h  bytes.c  bytes.h  bytes32.c  bytes32.h  bytes64.c  bytes64.h  encoding.h  marshaler.c  marshaler.h  rawjson.c  rawjson.h  string.c  string.h  url.c  url.h  uvarint.c  uvarint.h  varint.c  varint.h
src/common/internal/testing/: sha256.c  sha3.c  sha3.h
src/common/protocol/: enum.c  enum.h  general.h  signatures.c  signatures.h  transaction.c  transaction.c_  transaction.h  types.h  unions.c  unions.h
src/encoding/: bigint.c  bool.c  bytes.c  bytes32.c  bytes64.c  marshaler.c  rawjson.c  string.c  string_enc.c  url.c  uvarint.c  uvarint_enc.c  varint_enc.c
src/handler/: debug_tx.c  debug_tx.h  get_app_configuration.c  get_app_name.c  get_blind_signing_token.c  get_blind_signing_token.h  get_public_key.c  get_public_key.h  get_version.c  sign_tx.c  sign_tx.h
src/helper/: send_reponse.c  send_response.c  send_response.h
src/protocol/: enum.c  envelope.c  signatures.c_  transaction.c_  unions.c
src/transaction/: add_credits.c  comparison_transaction.h  comparison_unions.h  deserialize.c  header.c  send_tokens.c  serialize.c  signer.c  token_recipient.c  transaction.c  types.h  utils.c  utils.h
src/ui/: display.c  display.h  dynamic_display.c  dynamic_display.h  dynamic_display_bagl.c  menu.c
src/ui/action/: validate.c  validate.h
src/ui/display/: display.c  display.h  display_add_credits.c  display_address.c  display_address.h  display_bagl.c  display_blind_signing.c  display_memo.h  display_send_tokens.c  display_transaction.c  display_transaction.h
src/ui/menu/: menu.c  menu.h  menu_bagl.c
tests/: README.md  conftest.py  requirements.txt  test_appname_cmd.py  test_error_cmd.py  test_name_version.py  test_pubkey_cmd.py  test_sign_cmd.py  test_status_word.py  test_vectors_signed.json  test_vectors_unsigned.json  test_version_cmd.py
tests/accumulate_client/: accumulate_cmd.py  accumulate_cmd_builder.py  button.py  transaction.py  utils.py
tests/accumulate_client/exception/: device_exception.py
tests/boilerplate_client/: boilerplate_cmd.py  boilerplate_cmd_builder.py
tests/syscalls/: test_ecdsa.c
unit-tests/: CMakeLists.txt  _enums2.h  test_apdu_parser.c  test_base58.c  test_bip32.c  test_buffer.c  test_encoding.c  test_format.c  test_hasher.c  test_write.c
unit-tests/internal/: sha3.c  sha3.h
